Start work on login page Create empty text toggle component Start categories tracker component Start work on new task and new group popups

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="555171738719-1bkcdmoea6t3mvk5tiktltfoabh2ova6.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
