--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <meta name="google-signin-scope" content="profile email">
-    <meta name="google-signin-client_id" content="555171738719-1bkcdmoea6t3mvk5tiktltfoabh2ova6.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js"></script>
+    <script src="https://accounts.google.com/gsi/client" id="gsi-client" async defer></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
